--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "devconnector",
   "version": "1.0.0",
-  "description": "",
+  "description": "Social network for developers",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js"
   },
-  "author": "Liliya Fedyurina",
+  "author": "Kal Academy",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
