--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Liliya Fedyurina",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
@@ -22,6 +23,8 @@
     "mongoose": "^5.9.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-redux": "^7.2.0",
+    "redux-thunk": "^2.3.0",
     "validation": "0.0.1",
     "validator": "^12.2.0"
   },
